antlr/JimpleLang/src/test/resources/cases/funcs.jmpl.case
println "fact(5)=" + factorial(5)

fun factorial(n) {
    if (n == 0) {
        return 1
    }
    return n * factorial(n-1)
}
<----->
WARNING: Recursive call of function 'factorial' can lead to StackOverflow
fun factorial(n) {
    ^
fact(5)=120
<----->
fun print(a) {
    println a
}

print("aBC")
<----->
aBC
<----->
print("XyZ")

fun print(a) {
    println a
}
<----->
XyZ
<----->
if (greater(3, 2)) {
    println "3>2"
}

fun greater(a, b) {
    return a > b
}
<----->
3>2
<----->
if (greater(2, 4)) {
    println "2>4"
} else {
    println "2<4"
}

fun greater(a, b) {
    return a > b
}
<----->
2<4
<----->
if (1) {
    println "greater"
}
<----->
WARNING: The "if" condition must be of boolean type only. But found: NUMBER
if (1) {
    ^
!ERROR: The "if" condition must be of boolean type only. But found: NUMBER
<----->
println greater(1)
println greater(1,2)
println greater(1,2,3)

fun greater(a, b) {
    return a > b
}
<----->
ERROR: Function with such signature not found: greater
println greater(1)
        ^
ERROR: Function with such signature not found: greater
println greater(1,2,3)
        ^
<----->
if (3.14) {
    println "greater"
}
<----->
WARNING: The "if" condition must be of boolean type only. But found: DOUBLE
if (3.14) {
    ^
!ERROR: The "if" condition must be of boolean type only. But found: DOUBLE
<----->
if ("foo") {
    println "greater"
}
<----->
WARNING: The "if" condition must be of boolean type only. But found: STRING
if ("foo") {
    ^
!ERROR: The "if" condition must be of boolean type only. But found: STRING
<----->
println 123/minus(4,5)
println 123/minus(5,4)
println 123/minus(5,5)

fun minus(a, b) {
    return a - b
}
<----->
-123
123
WARNING: Division by zero
println 123/minus(5,5)
           ^
!ERROR: / by zero
<----->
println 42/divBy0(5,8)
println 43/divBy0(6,7)

fun divBy0(a, b) {
    return b/(a - a)
}
<----->
WARNING: Division by zero
    return b/(a - a)
            ^
!ERROR: / by zero
<----->
println 45/alwaysZero(5,8)
println 56/alwaysZero(6,7)

fun alwaysZero(a, b) {
    return (b-b)*(b - a)
}
<----->
WARNING: Division by zero
println 45/alwaysZero(5,8)
          ^
WARNING: Division by zero
println 56/alwaysZero(6,7)
          ^
!ERROR: / by zero
<----->
println sum(4, 2)
println sum("4", "2")

fun sum(a, b) {
    return a+b
}
<----->
6
42
<----->
println sum(5,8)

fun sum(a, b) {
    return a+b
}
fun mul(a, b) {
    return a*b
}
<----->
WARNING: Function declared but not used: mul
fun mul(a, b) {
    ^
13
<----->
println rec(5,8)

fun rec(a, b) {
    return rec(b, a)
}
<----->
WARNING: Recursive call of function 'rec' can lead to StackOverflow
fun rec(a, b) {
    ^
!ERROR: StackOverflowError
<----->
println rec(5,8)

fun rec(a, b) {
    rec(b, a)
    return ""
}
<----->
WARNING: Recursive call of function 'rec' can lead to StackOverflow
fun rec(a, b) {
    ^
!ERROR: StackOverflowError
<----->
println abc(5,8)

fun abc(a, b) {
    return xyz(b, a)
}
fun xyz(a, b) {
    return abc(b, a)
}
<----->
WARNING: Recursive call of function 'abc' can lead to StackOverflow
fun abc(a, b) {
    ^
!ERROR: StackOverflowError
<----->
